Fix some layout issues

--- a/src/Components/Icon/_icon.scss
+++ b/src/Components/Icon/_icon.scss
@@ -20,7 +20,7 @@
 	transition: opacity 200ms ease;
   margin-left: 0;
   max-height: 20vh;
-  width: 100%;
+  width: 20vh;
 }
 
 .icon:hover {
