--- a/src/Components/Row/_row.scss
+++ b/src/Components/Row/_row.scss
@@ -6,7 +6,7 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin: 5px 0;
 	position: relative;
 	text-align: center;
