--- a/src/Components/SDGexplorer/_sdgexplorer.scss
+++ b/src/Components/SDGexplorer/_sdgexplorer.scss
@@ -4,9 +4,8 @@
   box-sizing: border-box;
   padding: 5px;
   position: relative;
-  margin: 0 auto;
+  margin: 0 0 0 3.5555%;
   height: 100vh;
-	width: auto;
 }
 
 .sliding-viewer {
