--- a/src/Components/Triangle/_triangle.scss
+++ b/src/Components/Triangle/_triangle.scss
@@ -7,5 +7,5 @@
 	width: 0;
   margin: 0;
   padding: 0;
-  bottom: -12%;
+  bottom: -10%;
 }
