--- a/src/Components/ViewerWindow/_viewerWindow.scss
+++ b/src/Components/ViewerWindow/_viewerWindow.scss
@@ -2,10 +2,10 @@
 .viewerWindow {
 	box-sizing: border-box;
 	overflow: hidden;
-	padding: 0 10px;
+  margin: 0 0 0 15px;
 	position: static;
 	text-align: center;
-	width: 100%;
+  width: 100%;
 
 	.iframe-wrapper {
 		clear: both;
