--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -37,14 +37,12 @@ html, body {
 
 h1 {
 	display: inline;
-	font-size: 4rem;
-	color: #fff;
+	font-size: 7rem;
+	color: $iloblue;
 	font-family: $sdg-number;
 	position: relative;
 	line-height: 90%;
 	letter-spacing: 0.024em;
-	margin: 0 0 0 15px;
-	width: 90%;
 }
 
 h2 {
@@ -107,76 +105,4 @@ span.more {
 
 a {
 	text-decoration: none;
-}
-
-/* ILO GRID */
-
-.large-3-col {
-    float: left;
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 25%;
-}
-
-.large-5-col {
-	float: left;
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 41.66666667%;
-}
-
-.large-6-col {
-	box-sizing: border-box;
-	float: left;
-	position: relative;
-	min-height: 1px;
-	padding-left: 15px;
-	padding-right: 15px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	width: 50%;
-}
-
-.large-7-col {
-	float: left;
-	font-weight: 400;
-	position: relative;
-	min-height: 1px;
-	padding-left: 15px;
-	padding-right: 15px;
-	box-sizing: border-box;
-	width: 58.3333333%;
-}
-
-.large-9-col {
-	float: left;
-	position: relative;
-	min-height: 1px;
-	padding-left: 15px;
-	padding-right: 15px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	width: 75%;
-}
-
-.large-12-col {
-    float: left;
-    position: relative;
-    min-height: 1px;
-    padding-right: 15px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 100%;
 }
